[package]
name = "aaw-collection"
version = "0.1.0"
authors = ["netfox <say-hi@netfox.rip>"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }
ink_env = { version = "4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"], optional = true }

psp34 = { git = "https://github.com/just-ape-studios/just-ape-studios-contracts.git", branch = "v2", default-features = false }

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "psp34/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
